--- a/backup/SkillEdge-AI/package.json
+++ b/backup/SkillEdge-AI/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint --dir .",
     "postinstall": "prisma generate",
     "prisma:generate": "prisma generate",
     "supabase:setup": "node setup-supabase.js",
